# fincubes-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  import-secrets.sh  main.py  migrate_result2_objects.py  pyproject.toml  requirements.txt  run.py  temp.json  temp2.json  test.py  test_flags.py  test_mail.py  test_redis.py  test_redis_keys.py
.github/workflows/: deploy.yml  export-secrets.yml  openapi.yml
app/: main.py
app/core/: errors.py  logger.py
app/core/config/: __init__.py  base.py  log_config.json  middleware.py  tortoise_orm.py
app/integrations/: captcha.py  cloudflare.py  mail.py  yandex_cdn_api.py  yandexcloud.py
app/jobs/: daily_ranking.py  fix_resolved_time_column.py  init_postgres.py  jobs.py  manager.py
app/models/: __init__.py  base.py
app/repositories/: get_top_results.py  ratings.py  search_athletes.py  search_competitions.py  sitemap.py  temp.py
app/schemas/: __init__.py
app/services/: admin_maintenance.py
app/sql/: add_resolved_time.sql  drop_resolved_time.sql  search_resolved_time.sql  utils.py
app/templates/: mail_confirm_code.html  mail_reset_password.html  mail_warn_confirm.html
auth/user/: registration.py
docker/postgres-init/: init.sql
misc/: cloudflare.py  errors.py  get_top_results.py  mail.py  ratelimit.py  ratings.py  redis_cache_compressed.py  security.py  templates.py  utils.py  yandexcloud.py
models/: enums.py  flexible_time.py  models.py  redis_client.py
routers/: athletes.py  auth.py  coaches.py  competitions.py  distances.py  record.py  region.py  results.py  standard.py  top_recent.py
routers/auth/: __init__.py  admin.py  auth.py  password.py  profile.py  verify.py
routers/users/: __init__.py  athletes.py  coach.py  coaches.py  parent.py  utils.py
schemas/: __init__.py  athlete.py  auth.py  competition.py  distance.py  flexible_time.py  home.py  performance.py  records.py  region.py  result.py  standards.py  top.py  users.py
schemas/users/: coach.py  role.py
services/: __init__.py  backgrounds.py  s3_session.py
templates/: mail_confirm_code.html  mail_reset_password.html
tests/: build_filename.py  manage.py  openapi.py  rss.py  sitemap.py  test.py  test_app.py  test_athlete_identity.py  test_scopes.py  test_scopes_check.py  tortoise_config.py
utils/: security.py  sql_raw.py
(+267 files in other folders)
