[tool.poetry]
name = "your-app-name"
version = "0.1.0"
description = "FastAPI-based application with Tortoise ORM, Redis, Auth, Email, and integrations"
authors = ["Your Name <your@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

fastapi = "0.115.12"
uvicorn = { extras = ["standard"], version = "0.34.2" }
aiohttp = "3.11.18"

tortoise-orm = "0.25.1"
pydantic = "2.11.4"
pydantic-settings = "2.2.1"

passlib = "1.7.4"
pyjwt = "2.10.1"

redis = { extras = ["asyncio"], version = "6.0.0" }

apscheduler = "^3.10.4"  # У тебя не указана версия, оставляю как есть

aiosmtplib = "4.0.1"
email-validator = "2.2.0"

jinja2 = "3.1.6"

botocore = "1.38.21"
pytest = "^8.2.0"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.aerich]
tortoise_orm = "app.services.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
