[tool.poetry]
name = "fincubes-fastapi"
version = "0.1.0"
description = "FastAPI-based application with Tortoise ORM, Redis, Auth, Email, and integrations"
authors = ["Dybfuo"]
license = "MIT"

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "0.115.12"
uvicorn = { extras = ["standard"], version = "0.34.2" }
aiohttp = "^3.11.18"

tortoise-orm = {extras = ["asyncpg"], version = "^0.25.1"}
pydantic = "2.11.4"
pydantic-settings = "2.2.1"

passlib = "1.7.4"
pyjwt = "2.10.1"

redis = { extras = ["asyncio"], version = "6.0.0" }

apscheduler = "^3.10.4"

aiosmtplib = "4.0.1"
email-validator = "2.2.0"

jinja2 = "3.1.6"

botocore = "1.38.21"
httpx = "0.28.1"
sentry-sdk = "^2.32.0"
cordlog = "^1.0.0"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"
fastfsx = "^1.0.5"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
jwtifypy = "^0.2.0"
sqlalchemy = "^2.0.42"

[tool.poetry.group.dev.dependencies]
typer = {extras = ["all"], version = "^0.16.0"}
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"
dev = "app.main:dev"
manage = "tests.manage:app"

[tool.aerich]
tortoise_orm = "app.services.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
